--- a/style.css
+++ b/style.css
@@ -130,10 +130,6 @@ table {
     border-spacing: 0;
 }
 
-a:hover {
-    text-decoration: none !important;
-}
-
 /*genrel classes*/
 .light-blue {
     background-color: #f4f5f6;
@@ -141,6 +137,10 @@ a:hover {
 
 .white {
     background-color: #ffffff;
+}
+
+.c-white {
+    color: white;
 }
 
 .orange {
@@ -152,11 +152,38 @@ a:hover {
 }
 
 .f-14 {
-    font-size: 14px;
+    font-size: 14px !important;
 }
 
 .f-15 {
-    font-size: 15px;
+    font-size: 15px !important;
+}
+
+.f-17 {
+    font-size: 17px !important;
+}
+
+.hover:hover {
+    color: #f72210 !important;
+    text-decoration: none !important;
+}
+
+.roboto {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bolder !important;
+}
+
+.arial {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.lora {
+    font-family: 'Lora', serif;
+}
+
+.img-sm {
+    height: 90px;
+    width: 135px;
 }
 
 /*classes*/
@@ -190,5 +217,22 @@ a:hover {
 }
 
 .culture_2 {
-    height: 408px;
+    height: 390px;
+}
+
+.icon {
+    width: 29px;
+    height: 28px;
+    background-color: #f72210;
+}
+
+.sign-up {
+    width: 100px;
+    height: 38px;
+    background-color: #666666
+}
+
+.top-title {
+    font-size: 22px;
+    font-weight: bolder;
 }
