--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ table {
 }
 
 /*genrel classes*/
+
+.bold {
+    font-weight: 700;
+}
+
 .light-blue {
     background-color: #f4f5f6;
 }
@@ -139,8 +144,16 @@ table {
     background-color: #ffffff;
 }
 
+.bg-light-grey {
+    background-color: #f4f5f6;
+}
+
 .c-white {
     color: white;
+}
+
+.c-orange {
+    color: #f72210;
 }
 
 .orange {
@@ -149,6 +162,14 @@ table {
 
 .black {
     color: black !important;
+}
+
+.light-black {
+    color: #333333;
+}
+
+.bg-light-grey:hover {
+    background-color: #a8a8a8;
 }
 
 .f-14 {
@@ -161,6 +182,18 @@ table {
 
 .f-17 {
     font-size: 17px !important;
+}
+
+.f-18 {
+    font-size: 18px;
+}
+
+.f-19 {
+    font-size: 19px;
+}
+
+.unstyled-link {
+    text-decoration: none;
 }
 
 .hover:hover {
@@ -184,6 +217,19 @@ table {
 .img-sm {
     height: 90px;
     width: 135px;
+}
+
+.pointer:hover {
+    cursor: pointer;
+}
+
+.orange-button {
+    background-color: #f72210;
+    color: #ffffff;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 10px 10px 10px 12px;
 }
 
 /*classes*/
@@ -235,4 +281,39 @@ table {
 .top-title {
     font-size: 22px;
     font-weight: bolder;
+}
+
+.magazine>div>article>a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 18px;
+}
+
+.row-section>article {
+    height: 376px;
+    width: 320px;
+}
+
+.row-section>article>a>img {
+    height: 290px;
+    width: 100%;
+}
+
+.subscribe-left {
+    max-height: 301px;
+}
+
+.overlayed-image {
+    position: relative;
+    top: -212px;
+    left: 80px;
+}
+
+.footer-image {
+    background-image: url(https://d.newsweek.com/en/full/1525348/newsletter-promo-home-page.png?w=397&h=265&q=90&f=172a044c08b5e64f42dcb61b425487bf);
+    background-size: cover;
+    background-position: center center;
+    max-width: 191px;
+    width: 191px;
+    height: 301px;
 }
