--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,300 +1,310 @@
 /*genrel classes*/
 
 .border-red {
-    border: red solid 2px;
+  border: red solid 2px;
 }
 
 .bold {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .light-blue {
-    background-color: #f4f5f6;
+  background-color: #f4f5f6;
 }
 
 .white {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .bg-light-grey {
-    background-color: #f4f5f6;
+  background-color: #f4f5f6;
 }
 
 .c-white {
-    color: white;
+  color: white;
 }
 
 .c-orange {
-    color: #f72210;
+  color: #f72210;
 }
 
 .orange {
-    background-color: #f72210;
+  background-color: #f72210;
 }
 
 .black {
-    color: black !important;
+  color: black !important;
 }
 
 .light-black {
-    color: #333333;
+  color: #333333;
 }
 
 .bg-light-grey:hover {
-    background-color: #a8a8a8;
+  background-color: #a8a8a8;
 }
 
 .f-14 {
-    font-size: 14px !important;
+  font-size: 14px !important;
 }
 
 .f-15 {
-    font-size: 15px !important;
+  font-size: 15px !important;
 }
 
 .f-17 {
-    font-size: 17px !important;
+  font-size: 17px !important;
 }
 
 .f-18 {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .f-19 {
-    font-size: 19px;
+  font-size: 19px;
 }
 
 .unstyled-link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .hover:hover {
-    color: #f72210 !important;
-    text-decoration: none !important;
+  color: #f72210 !important;
+  text-decoration: none !important;
 }
 
 .roboto {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: bolder !important;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: bolder !important;
 }
 
 .arial {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .lora {
-    font-family: 'Lora', serif;
+  font-family: "Lora", serif;
 }
 
 .img-sm {
-    height: 90px;
-    width: 135px;
+  height: 90px;
+  width: 135px;
 }
 
 .pointer:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .orange-button {
-    background-color: #f72210;
-    color: #ffffff;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    padding: 10px 10px 10px 12px;
+  background-color: #f72210;
+  color: #ffffff;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 10px 10px 10px 12px;
 }
 
 /*classes*/
 
 .page-container {
-    width: 1310px;
+  width: 1310px;
 }
 
 .page-header {
-    width: 100%;
-    height: 95px;
-    background-color: #e44322;
+  width: 100%;
+  height: 95px;
+  background-color: #e44322;
 }
 
 .nav-link:hover {
-    color: #f72210 !important;
+  color: #f72210 !important;
 }
 
 .category {
-    color: black;
-    background-color: #c2d4d7;
+  color: black;
+  background-color: #c2d4d7;
 }
 
 .category:hover {
-    color: #c2d4d7;
-    background-color: #333333;
-    text-decoration: none;
+  color: #c2d4d7;
+  background-color: #333333;
+  text-decoration: none;
 }
 
 .culture {
-    height: 475px;
+  max-height: auto;
+  height: auto;
 }
 
 .culture_2 {
-    height: 390px;
+  max-height: auto;
+  height: auto;
 }
 
 .icon {
-    width: 29px;
-    height: 28px;
-    background-color: #f72210;
+  width: 29px;
+  height: 28px;
+  background-color: #f72210;
 }
 
 .sign-up {
-    width: 100px;
-    height: 38px;
-    background-color: #666666
+  width: 100px;
+  height: 38px;
+  background-color: #666666;
 }
 
 .top-title {
-    font-size: 22px;
-    font-weight: bolder;
+  font-size: 22px;
+  font-weight: bolder;
 }
 
-.magazine>div>article>a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 18px;
+.magazine > div > article > a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 18px;
 }
 
-.row-section>article {
-    height: 376px;
-    width: 320px;
+.row-section > article {
+  height: auto;
+  width: 320px;
 }
 
-.row-section>article>a>img {
-    height: 290px;
-    width: 100%;
+.row-section > article > a > img {
+  height: auto;
+  width: 100%;
 }
 
 .subscribe-left {
-    max-height: 301px;
+  max-height: 301px;
 }
 
-
 .bottom-image {
-    position: relative;
-    top: 0;
-    left: 0;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
 .overlayed-image {
-    position: relative;
-    top: 5vw;
-    left: -20vw;
+  position: relative;
+  top: 5vw;
+  left: -20vw;
 }
 
 .text-container {
-    height: auto;
+  height: auto;
 }
-
 
 .footer-image {
-    background-image: url(https://d.newsweek.com/en/full/1525348/newsletter-promo-home-page.png?w=397&h=265&q=90&f=172a044c08b5e64f42dcb61b425487bf);
-    background-size: cover;
-    background-position: center center;
-    max-width: 191px;
-    width: 191px;
-    height: 301px;
+  background-image: url(https://d.newsweek.com/en/full/1525348/newsletter-promo-home-page.png?w=397&h=265&q=90&f=172a044c08b5e64f42dcb61b425487bf);
+  background-size: cover;
+  background-position: center center;
+  max-width: 191px;
+  width: 191px;
+  height: 301px;
 }
 
+@media only screen and (min-width: 200px) {
+  h4 {
+    font-size: 20px;
+  }
 
-@media only screen and (min-width: 200px) and (max-width: 767px) {
-    h4 {
-        font-size: 20px;
-    }
+  .page-header {
+    height: 50px;
+  }
 
-    .page-header {
-        height: 50px;
-    }
+  .page-header > img {
+    height: 50px;
+  }
 
-    .page-header>img {
-        height: 50px
-    }
+  .page-header > a:nth-child(4) {
+    color: #ffffff;
+    font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    float: right;
+    margin-top: 15px;
+  }
 
-    .page-header>a:nth-child(4) {
-        color: #ffffff;
-        font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
-        font-weight: 700;
-        font-size: 14px;
-        float: right;
-        margin-top: 15px;
-    }
+  .page-header > a:nth-child(3) {
+    background-color: #ffffff;
+    padding: 6px 3px;
+    font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
+    color: #e44322;
+    font-weight: 700;
+    font-size: 14px;
+    float: right;
+    margin-top: 9px;
+  }
 
-    .page-header>a:nth-child(3) {
-        background-color: #ffffff;
-        padding: 6px 3px;
-        font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
-        color: #e44322;
-        font-weight: 700;
-        font-size: 14px;
-        float: right;
-        margin-top: 9px;
-    }
+  .page-header > a:nth-child(2) > img {
+    height: 50px;
+    float: right;
+  }
 
-    .page-header>a:nth-child(2)>img {
-        height: 50px;
-        float: right;
-    }
+  .subscribe-left {
+    max-height: 1000px;
+    height: auto;
+    flex-direction: column;
+    text-align: center;
+  }
 
-    .subscribe-left {
-        max-height: 1000px;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-    }
+  .footer-image {
+    max-width: 100%;
+    width: 100%;
+    height: 160px;
+  }
 
-    .footer-image {
-        max-width: 100%;
-        width: 100%;
-        height: 160px;
-    }
+  .newsletter-bottom {
+    text-align: center;
+    height: auto;
+  }
 
-    .newsletter-bottom {
-        text-align: center;
-        height: auto;
-    }
+  .img-container {
+    height: 300px;
+  }
 
-    .img-container {
-        height: 300px;
-    }
+  .footer > div {
+    flex-direction: column;
+  }
 
-    .footer>div {
-        flex-direction: column;
-    }
+  .social-links li > i {
+    padding-right: 10px;
+    font-size: 22px;
+  }
 
-    .social-links li>i {
-        padding-right: 10px;
-        font-size: 22px;
-    }
+  .footer-links {
+    flex-direction: column;
+  }
 
-    .footer-links {
-        flex-direction: column;
-    }
+  .footer-links ul {
+    width: 100%;
+  }
 
-    .footer-links ul {
-        width: 100%;
-    }
+  .footer-links ul li {
+    padding-right: 10px;
+  }
 
-    .footer-links ul li {
-        padding-right: 10px;
-    }
+  .footer-links ul li a {
+    color: #666666;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
 
-    .footer-links ul li a {
-        color: #666666;
-        font-size: 14px;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+@media only screen and (min-width: 768px) {
+  .culture {
+    max-height: 500px;
+    height: 500px;
+  }
 
+  .culture_2 {
+    max-height: 500px;
+    height: 430px;
+  }
 }
 
 @media only screen and (max-width: 1310px) {
-    .page-container {
-        max-width: 100%;
-    }
+  .page-container {
+    max-width: 100%;
+  }
 }
