changed max-height property

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,12 +181,12 @@
 }
 
 .culture {
-  max-height: auto;
+  max-height: 100%;
   height: auto;
 }
 
 .culture_2 {
-  max-height: auto;
+  max-height: 100%;
   height: auto;
 }
 
